// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given connected and no metadata, when rendering, then show account, no connect button, no node info, tokenization 1`] = `
<Dashboard
  colors={
    Object {
      "accounts": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "hintColor": "#00000066",
        "iconBackground": "#3b6cf4",
      },
      "bottomMenu": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "dashboard": Object {
        "background": "#152665",
        "foreground": "#000000",
      },
      "frame": Object {
        "background": "#3b6cf40f",
        "foreground": "#000000",
      },
      "menuArea": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "logoShadow": "#3b6cf433",
      },
      "primaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "link": "#3b6cf466",
      },
      "secondaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
      },
      "topMenu": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
>
  <UserRouter />
</Dashboard>
`;

exports[`Given connected, when rendering, then show account, no connect button and tokenization 1`] = `
<Dashboard
  colors={
    Object {
      "accounts": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "hintColor": "#00000066",
        "iconBackground": "#3b6cf4",
      },
      "bottomMenu": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "dashboard": Object {
        "background": "#152665",
        "foreground": "#000000",
      },
      "frame": Object {
        "background": "#3b6cf40f",
        "foreground": "#000000",
      },
      "menuArea": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "logoShadow": "#3b6cf433",
      },
      "primaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "link": "#3b6cf466",
      },
      "secondaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
      },
      "topMenu": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
>
  <UserRouter />
</Dashboard>
`;

exports[`Given connecting, when rendering, then show account, no button, no node info 1`] = `
<Dashboard
  colors={
    Object {
      "accounts": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "hintColor": "#00000066",
        "iconBackground": "#3b6cf4",
      },
      "bottomMenu": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "dashboard": Object {
        "background": "#152665",
        "foreground": "#000000",
      },
      "frame": Object {
        "background": "#3b6cf40f",
        "foreground": "#000000",
      },
      "menuArea": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "logoShadow": "#3b6cf433",
      },
      "primaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "link": "#3b6cf466",
      },
      "secondaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
      },
      "topMenu": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
/>
`;

exports[`Given connection error, when rendering, then show account, no button, no node info 1`] = `
<Dashboard
  colors={
    Object {
      "accounts": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "hintColor": "#00000066",
        "iconBackground": "#3b6cf4",
      },
      "bottomMenu": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "dashboard": Object {
        "background": "#152665",
        "foreground": "#000000",
      },
      "frame": Object {
        "background": "#3b6cf40f",
        "foreground": "#000000",
      },
      "menuArea": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "logoShadow": "#3b6cf433",
      },
      "primaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "link": "#3b6cf466",
      },
      "secondaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
      },
      "topMenu": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
/>
`;

exports[`Given disconnected, when rendering, then show disconnected and connect button 1`] = `
<Dashboard
  colors={
    Object {
      "accounts": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "hintColor": "#00000066",
        "iconBackground": "#3b6cf4",
      },
      "bottomMenu": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "dashboard": Object {
        "background": "#152665",
        "foreground": "#000000",
      },
      "frame": Object {
        "background": "#3b6cf40f",
        "foreground": "#000000",
      },
      "menuArea": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "logoShadow": "#3b6cf433",
      },
      "primaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "link": "#3b6cf466",
      },
      "secondaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
      },
      "topMenu": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
/>
`;

exports[`Given no injected account, when rendering, then nothing displayed 1`] = `
<Dashboard
  colors={
    Object {
      "accounts": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "hintColor": "#00000066",
        "iconBackground": "#3b6cf4",
      },
      "bottomMenu": Object {
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
      },
      "dashboard": Object {
        "background": "#152665",
        "foreground": "#000000",
      },
      "frame": Object {
        "background": "#3b6cf40f",
        "foreground": "#000000",
      },
      "menuArea": Object {
        "background": "#152665",
        "foreground": "#ffffff",
        "logoShadow": "#3b6cf433",
      },
      "primaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
        "link": "#3b6cf466",
      },
      "secondaryArea": Object {
        "background": "#ffffff",
        "foreground": "#000000",
      },
      "topMenu": Object {
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
      },
    }
  }
  menuBottom={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#7a90cb",
          "to": "#3b6cf4",
        },
        "text": "Settings",
        "to": "/user/settings",
      },
    ]
  }
  menuTop={
    Array [
      Object {
        "exact": true,
        "iconGradient": Object {
          "from": "#3b6cf4",
          "to": "#6050dc",
        },
        "text": "Tokens",
        "to": "/user/account",
      },
    ]
  }
  selectAddress={[MockFunction]}
  shieldItem={
    Object {
      "exact": true,
      "text": "My Logion Trust Protection",
      "to": "/user/protection",
    }
  }
>
  <UserRouter />
</Dashboard>
`;
